--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc",
     "build:w": "tsc -w",
-    "test": "tsd"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -33,5 +33,14 @@
         "dom"
       ]
     }
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^29.2.6",
+    "babel-jest": "^29.4.0",
+    "jest": "^29.4.0",
+    "typescript": "^4.9.4"
   }
 }
