特性: :sparkles: git add 08-ts-utility_types content

--- a/.github/workflows/pnpm.yml
+++ b/.github/workflows/pnpm.yml
@@ -1,4 +1,4 @@
-name: Bear-UI Pnpm
+name: Pnpm
 
 on:
   push:
@@ -20,5 +20,3 @@ jobs:
         run: pnpm install
       - name: Jest
         run: pnpm jest
-      # - name: Serve Docs
-      #   run: pnpm docs:serve
